# py-fastapi-homework-2-task

./: .env  .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: crud.py  main.py  paginations.py
src/config/: settings.py
src/crud/: __init__.py  actor.py  actors.py  base.py  countries.py  country.py  crud.py  genre.py  genres.py  language.py  languages.py  movie.py  movies.py  movies_crud.py
src/database/: __init__.py  crud.py  models.py  populate.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: d0c53c351d00_temp_migration.py  ea3a65568bd9_initial_migration.py
src/database/seed_data/: test_data.csv
src/routes/: crud.py  movies.py  utils.py
src/schemas/: __init__.py  actors.py  base.py  countries.py  genres.py  languages.py  movies.py  pagination.py  paginations.py
src/services/: crud.py  movie_crud.py
src/sources/: movie_create.py
src/tests/: conftest.py
src/tests/test_integration/: test_movies.py
src/utills/: get_or_create.py
src/utils/: pagination.py
