[tool.poetry]
name = "src"
version = "0.1.0"
description = "Mate task for first lesson"
authors = ["Yurii Okal <yurii.okal@mate.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pytest = "^8.3.4"
pydantic-settings = "^2.7.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
pytest-env = "^1.1.5"
flake8 = "^7.1.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
pytest-asyncio = "^0.25.3"
iso3166 = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79  # Максимальна довжина рядка (за замовчуванням 88)
target-version = ["py38", "py39", "py310"]  # Цільові версії Python
skip-string-normalization = false  # Не змінювати лапки у рядках (True/False "")
include = '\.pyi?$'  # Включити лише Python файли (.py, .pyi)
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations/
)/
'''  # Шаблон для виключення файлів
# pip install flake8-pyproject